package edu.estatuas.examendam;

public class ComputeCard {
    
    ScoreCard scoreCard;
    GolfPlay golfPlay;

    public void compute(){
        
    }

}
