package edu.estatuas.examendam;

public interface GolfPlay {

    

}
