package edu.estatuas.examendam;

public class Hole {

    int circuitos;

}
