package edu.estatuas.examendam;

public class StableFord implements GolfPlay{
    
    @Override
public void scoring(ScoreCard scoreCard) {
    scoreCard.getPlayerList()[0].isPresent() :
    getPlayerCourse();

    

    };
}
